examples/negative/mutable/param_array_write_no_row.kai
# Negative fixture (#511 / Mutable contract — issue #251):
# writing to an `Array[T]` parameter via `a[i] := v` is an
# observable mutation. The function's row must include
# `Mutable` — `Unit` (pure) must be rejected.

fn modify(a: Array[Int]) : Unit {
  a[0] := 42
}

fn main() : Unit / Mutable + Console = {
  let a = array_make(3, 0)
  modify(a)
  print(int_to_string(a[0]))
}
